GNOME Bugzilla – Bug 763858
Visual alerts per-window are crashing the session
Last modified: 2016-03-21 03:49:19 UTC
Using per-window (“titlebar-only”) visual alerts, with for example a ‘backspace’ key in `gnome-terminal`, make session/Shell 3.19.92 crash.
Created attachment 324311 [details] [review] bell: Fallback to fullscreen flash if no window was passed We allow to flash without providing a window. In this case we should flash the whole screen, instead of crashing.
Review of attachment 324311 [details] [review]: LGTM
Freeze request accepted, so pushing this one now. Attachment 324311 [details] pushed as 92c8a51 - bell: Fallback to fullscreen flash if no window was passed